[package]
name = "labeler"
version = "0.1.5"
authors = ["syncpark <dkpark@petabi.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
bincode = "1.3"
chrono = "0.4"
env_logger = "0.9"
flate2 = "1.0"
glob = "0.3"
itertools = "0.10"
log = "0.4"
regex = "1.3"
num = "0.4"
num_cpus = "1"
num-derive = "0.3"
num-format = "0.4"
num-traits = "0.2"
percent-encoding = "2.1"
rustyline = "6.2"
rustyline-derive = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
strum = { version = "0.24", features = ["derive"] }
threadpool = "1.8"
